added student id for anton

--- a/Assignment1.ipynb
+++ b/Assignment1.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "## **Group 13**\n",
     "- **Mikkel Agerbo Essendrop**\n",
-    "- **Anton Mosquera Storgaard**\n",
+    "- **Anton Mosquera Storgaard, s214611**\n",
     "- **Gustav Hylsberg Jacobsen, s214374**\n",
     "\n",
     "All group members share equal responsibility for all three parts of this assignment. The work presented here represents a collective effort, and each member has contributed to understanding and completing the tasks.\n"
