--- a/Assignment1.ipynb
+++ b/Assignment1.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "source": [
     "## **Group 13**\n",
-    "- **Mikkel Agerbo Essendrop**\n",
+    "- **Mikkel Agerbo Essendrop, s194157**\n",
     "- **Anton Mosquera Storgaard, s214611**\n",
     "- **Gustav Hylsberg Jacobsen, s214374**\n",
     "\n",
