small formatting and final answer

--- a/Assignment1.ipynb
+++ b/Assignment1.ipynb
@@ -34,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\Huge \\textbf{Part 1:}$\n",
+    "## Part 1\n",
     "\n",
     "We record following data Customers: $N = 115$, Customers with purchase: $y = 4$, we want to deduce the probability that at least one of the next 20 Customers : $N^* = 20$ makes a purchase.\n",
     "\n",
@@ -344,7 +344,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\Huge \\textbf{Part 2:}$\n",
+    "## Part 2\n",
     "\n",
     "In part 2 we will be working with Linear Gaussian systems.\n",
     "\n",
@@ -389,7 +389,6 @@
     "\\begin{align*}\n",
     "p(z_2 \\vert z_1) &= \\frac{p(z_2, z_1) }{p(z_1)} \\hspace{1cm}\n",
     "p(z_2, z_1) = p(z_2 \\vert z_1) p(z_1) \\tag{8}\n",
-    "\n",
     "\\end{align*}\n",
     "\n",
     "This expression can be substituted into the sum rule, and now we want to marginalize out the $z_1$ factor so we are left with the $z_2$ distribution\n",
@@ -435,13 +434,7 @@
     "\n",
     "\\begin{equation}\n",
     "p(y) \\sim \\mathcal{N}(0, 2v(a^Ta)+\\sigma^2)\n",
-    "\\end{equation}\n",
-    "\n",
-    "<!-- \\begin{align*}\n",
-    "    p(y)  &\\sim \\mathcal{N}(a^Tz_2 + 0, \\sigma^2 + 2vI) \\\\\n",
-    "          &\\sim a^T \\cdot \\mathcal{N}(z_2, \\sigma^2 + 2vI) \\\\\n",
-    "          &\\sim \\mathcal{N}(0, a^T \\sigma^2 + 2va^T) \\tag{11}\n",
-    "\\end{align*} -->"
+    "\\end{equation}"
    ]
   },
   {
@@ -565,7 +558,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\Huge \\textbf{Part 3:}$\n",
+    "## Part 3\n",
     "\n",
     "In part 3 we will be working with the Poisson-Gamma model:\n",
     "$$\n",
@@ -575,7 +568,7 @@
     "p(\\lambda|a_0,b_0) &= \\frac{b_0^{a_0}}{\\Gamma(a_0)}\\lambda^{a_0-1}\\exp(-b_0\\lambda), \n",
     "\\end{align*}\n",
     "$$\n",
-    "where $y_i \\isin \\mathbb{N}_0\\ \\text{and}\\ \\lambda,\\ a_0,\\ b_0 \\isin \\mathbb{R}^+$.\n",
+    "where $y_i \\in \\mathbb{N}_0\\ \\text{and}\\ \\lambda,\\ a_0,\\ b_0 \\in \\mathbb{R}^+$.\n",
     "\n",
     "$\\textbf{Task 3.1}$ Determine the joint distribution $p(\\mathbf{y},\\lambda)$.\n",
     "\n",
