--- a/assignment2_part2.ipynb
+++ b/assignment2_part2.ipynb
@@ -103,7 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The joint distribution will also be a gaussian, however, the mean of the likelyhood gaussian, $f(x)$, is non-linear, hence, it is not possible to derive a Gaussian distribution analytically, through the equations of section 3.3 *Linear Gaussian systems* in Murphy1."
+    "The mean of the likelyhood gaussian $f(x)$ is non-linear, hence, we cannot collect the sum of squared exponentials into a linear combination of $w_0$ and $w_1$. It is not possible to derive a Gaussian distribution analytically, through the equations of section 3.3 *Linear Gaussian systems* in Murphy1."
    ]
   },
   {
@@ -247,6 +247,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The gradient of the log joint is close to 0 around the maximum illustated in the contour plot below."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**The Hessian:**\n",
     "$$ \\begin{align*}\n",
     "\\mathcal{H}(\\textbf{w}) = \\sum_{i,j} \\frac{\\partial^2}{\\partial w_i \\partial w_j} \\log p(\\mathbf{y}, \\mathbf{w}) &= \\nabla_{\\mathbf{w}} \\left[-\\frac{1}{\\tau^2}\\mathbf{w} -\\beta \\sum_{n=1}^N\n",
@@ -270,12 +277,13 @@
     "\n",
     "Plugging in the expressions for the partial derivatives, we get the hessian\n",
     "$$\n",
-    "\\mathcal{H}(\\textbf{w})\n",
+    "\\begin{align*}\n",
+    "\\mathcal{H}(\\textbf{w}) =\n",
     "\n",
     "\\begin{pmatrix} - w_1y_n\\sigma'' + w_1^2\\sigma'\\sigma' +w_1^2\\sigma\\sigma''  & - y_n \\sigma' + 2w_1\\sigma\\sigma'\\\\\n",
-    "- y_n\\sigma'+ 2w_1\\sigma\\sigma' h  \\sigma^2\n",
+    "- y_n\\sigma'+ 2w_1\\sigma\\sigma'  & \\sigma^2\n",
     "\\end{pmatrix}\n",
-    "\n",
+    "\\end{align*}\n",
     "$$\n",
     "\n"
    ]
@@ -309,6 +317,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Hessian of log joint is negative around the extremum, hence we have found a maximum."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Task 2.5: Determine the Laplace approximation $q(w)$ of the posterior distribution such that\n",
     "$p(w|y) \\approx q(w)$.**"
    ]
@@ -319,41 +334,14 @@
    "source": [
     "The Laplace approximation assumes that we can fit a gaussian to the posterior distribution locally at the MAP with variance corresponding to the inverse, negative hessian of the logaritmic joint distribution.\n",
     "$$\n",
-    "p(\\mathbf{w}|\\mathbf{y})\\approx q(\\mathbf{w})=\\mathcal{N}\\left(\\mathbf{w}|\\mathbf{w}_{\\text{MAP}},\\left[-\\nabla^2_{\\mathbf{w}}\\log p(\\mathbf{w},\\mathbf{y})\\big\\rvert_{\\mathbf{w}=\\mathbf{w}_{\\text{MAP}}} \\right]^{-1} \\right)\n",
+    "p(\\mathbf{w}|\\mathbf{y})\\approx q(\\mathbf{w})=\\mathcal{N}\\left(\\mathbf{w}|\\mathbf{w}_{\\text{MAP}},-\\mathcal{H(\\mathbf{w}_{\\text{MAP}})}^{-1} \\right)\n",
     "$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "We can find the MAP by\n",
-    "$$\n",
-    "\\begin{align*}\n",
-    "\\nabla_{\\mathbf{w}} \\log p(\\mathbf{y}, \\mathbf{w}) &= -\\frac{w_0+w_1}{\\tau^2} -\\frac{\\beta}{2} \\sum_{n=1}^N \\nabla_{\\mathbf{w}}\\left[y_n^2 - 2 y_n w_1 \\sigma\\left(x_n+w_0\\right) + \\left(w_1 \\sigma\\left(x_n+w_0\\right)\\right)^2\\right] = 0\\\\\n",
-    "\\Leftrightarrow  w_0 + w_1 &= -\\tau^2\\frac{\\beta}{2} \\sum_{n=1}^N \\nabla_{\\mathbf{w}}\\left[y_n^2 - 2 y_n w_1 \\sigma\\left(x_n+w_0\\right) + \\left(w_1 \\sigma\\left(x_n+w_0\\right)\\right)^2\\right]\n",
-    "\\end{align*}\n",
-    "$$\n",
-    "which leads to\n",
-    "$$\n",
-    "\\begin{align*}\n",
-    "-\\tau^2\\frac{\\beta}{2} \\sum_{n=1}^N\\frac{\\partial}{\\partial w_0} &\\left[ y_n^2 - 2 y_n w_1 \\sigma + w_1^2\\sigma^2 \\right] =-\\tau^2\\frac{\\beta}{2} \\sum_{n=1}^N\n",
-    " - 2 y_n w_1\\sigma'+ 2w_1^2\\sigma\\sigma' = w_0\n",
-    "\n",
-    "\\\\\n",
-    "-\\tau^2\\frac{\\beta}{2} \\sum_{n=1}^N\\frac{\\partial}{\\partial w_1} &\\left[  y_n^2 - 2 y_n w_1 \\sigma + w_1^2\\sigma^2 \\right] =-\\tau^2\\frac{\\beta}{2} \\sum_{n=1}^N\n",
-    " - 2 y_n\\sigma + 2 w_1 \\sigma^2 = w_1\n",
-    "\\end{align*}$$\n",
-    "\n",
-    "\n",
-    "Hence, the Laplace approximation becomes\n",
-    "\n",
-    "$$\n",
-    "q(\\mathbf{w}) = \\mathcal{N}\\left(\\mathbf{w}| \\right)\n",
-    "\n",
-    "\n",
-    "$$"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
