--- a/Gustav/Gustav3.ipynb
+++ b/Gustav/Gustav3.ipynb
@@ -40,12 +40,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6f4f926",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "b98ba6c2",
    "metadata": {},
    "source": [
@@ -54,19 +48,19 @@
     "We identify firs that our lengthscale parameter follows af half normal distribution given in \n",
     "\n",
     "\\begin{equation}\n",
-    "    \\mathcal{l} \\sim \\mathcal{N}_+(0,v)\n",
+    "    \\ell \\sim \\mathcal{N}_+(0,v)\n",
     "\\end{equation}\n",
     "\n",
     "We now the condition we need to fulfill as\n",
     "\n",
     "\\begin{equation}\n",
-    "    P(\\mathcal{l} > 100) \\approx 0.01\n",
+    "    P(\\ell > 100) \\approx 0.01\n",
     "\\end{equation}\n",
     "\n",
     "We can express our distribution of $l$ as $l = |\\sqrt{v} \\cdot Z|$ with $Z$ being a standard normal variable. This is because we now that $l$ is a half normal distributions. We can then insert this equation into our condition. We do some reductions and since we have that the standard normal distribution is symmetric we can view it as a two-tailed probability.\n",
     "\n",
     "\\begin{align}\n",
-    "P(l > 100) = P(|\\sqrt{v} \\cdot Z| > 100) &\\approx 0.01 \\\\\n",
+    "P(\\ell > 100) = P(|\\sqrt{v} \\cdot Z| > 100) &\\approx 0.01 \\\\\n",
     "P(\\frac{|Z| > 100}{\\sqrt{v}}) &\\approx 0.01 \\hspace{2cm} \\text{Two-tailed} \\\\\n",
     "2 \\cdot P(\\frac{Z > 100}{ \\sqrt{v}}) &\\approx 0.01 \\\\\n",
     "P(\\frac{Z > 100}{ \\sqrt{v}}) &\\approx 0.005\n",
@@ -133,6 +127,14 @@
    "metadata": {},
    "source": [
     "So when $v \\approx 1507$ the probability of the lengthscale parameter being above 100 will be roughly 1%"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fcb01d27",
+   "metadata": {},
+   "source": [
+    "$\\textbf{Task 1.2}$ Determine the marginalized distribution $p(y,\\sigma, k, \\ell)$"
    ]
   }
  ],
