--- a/Part2_assignment3.ipynb
+++ b/Part2_assignment3.ipynb
@@ -411,7 +411,7 @@
    "source": [
     "Looking at the data and the derived log joint distribution, we expect $z_n=1$ to be the first part with a positive slope and $z_n=0$ to be the second part with a negative slope. Because of this convention, we expect the slope parameter of $\\boldsymbol{v}$ to be negative. We also notice the variance for the data points in region $z_n=0$ is much larger than in the in region $z_n=1$. With good initial guesses for the parameters, we might have a good chance of being close to convergence (for relatively few iterations), when picking a low proposal variance to get a high accpetance ratio.\n",
     "\n",
-    "Hence, we guess for the parameters to be around:\n",
+    "Hence, we guess for the parameters to be near:\n",
     "$$\n",
     "\\begin{equation*}\n",
     "\\theta = \\left[ \\boldsymbol{w}_0 = \\binom{-3}{0},\\ \\boldsymbol{w}_1 = \\binom{2}{0},\\\n",
@@ -419,7 +419,7 @@
     "\\end{equation*}\n",
     "$$\n",
     "\n",
-    "We set the variance of the proposal distribution to 0.2 (called step_size in code) and run the sampler for 20.000 iterations. We expect higher acceptance ratio with the low proposal variance, thus we need a relatively large number of iterations to ensure convergence."
+    "We set the variance of the proposal distribution to 0.2 (called step_size in code) and run the sampler for 20.000 iterations. We expect higher acceptance ratio with the low proposal variance."
    ]
   },
   {
