Not working implementation of part 1.3 and 1.4

--- a/Part2_assignment3.ipynb
+++ b/Part2_assignment3.ipynb
@@ -31,12 +31,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "b3a6ec04",
    "metadata": {},
    "outputs": [],
    "source": [
-    "design_matrix = lambda x: np.column_stack((x,np.ones(len(x))))"
+    "def design_matrix(x):\n",
+    "    return np.column_stack((x,np.ones(len(x))))"
    ]
   },
   {
